<resources>
    <string name="app_name">图片标注(管理员)</string>
    <string name="confer">确定</string>
    <string name="cancel">取消</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--个人信息-->
    <string name="action_settings">设置</string>
    <string name="username">手机号</string>
    <string name="username1">用户名</string>
    <string name="password">密码</string>
    <string name="conferPassword">确认密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="rememberUsername">记住用户名</string>
    <string name="toRegister">我要注册</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="updatePassword">修改密码</string>
    <string name="toLogin">已有账户？返回登录</string>
    <string name="code">验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="sex">性别</string>
    <string name="nickname">昵称</string>
    <string name="signature">签名</string>
    <string name="undefine">未设置</string>
    <string name="resetPassword">重置密码</string>
    <string name="resetConfer">确认重置</string>
    <!--菜单-->
    <string name="uploadImages">上传图片</string>
    <string name="overlayResult">标签化结果</string>
    <string name="imageManage">图片管理</string>
    <string name="userManage">用户管理</string>
    <string name="personal">个人中心</string>
    <string name="signOut">注销</string>


    <string-array name="sexArray">
        <item>未设置</item>
        <item>男</item>
        <item>女</item>
    </string-array>
</resources>
