<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_re_set_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="50dp"
    android:paddingStart="50dp"
    android:background="#14b9b9"
    tools:context="com.example.zqb.imageoverlaysadmin.views.ReSetPasswordActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="80dp"
        android:text="@string/resetPassword"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/my_rectangle_shape">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/phone"/>
        <EditText
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="4.0"
            android:textColor="@color/textWhite"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:hint="@string/username"
            android:gravity="center_vertical"
            android:textColorHint="@color/text_Grey"
            android:inputType="number"
            android:background="@drawable/edit_shape_without_border"
            android:id="@+id/phone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/my_rectangle_shape"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:paddingRight="0dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_code"/>
            <EditText
                android:layout_height="43dp"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="4.0"
                android:maxLines="1"
                android:inputType="number"
                android:textColor="@color/textWhite"
                android:textCursorDrawable="@drawable/edit_cursor_color"
                android:hint="@string/code"
                android:gravity="center_vertical"
                android:textColorHint="@color/text_Grey"
                android:background="@drawable/edit_shape_without_border"
                android:id="@+id/code"/>
        </LinearLayout>
        <Button
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:text="@string/getCode"
            android:id="@+id/getCode"
            android:clickable="true"
            android:textSize="13sp"
            android:textColor="@color/textWhite"
            android:focusable="true"
            android:background="@drawable/my_button"
            android:layout_weight="1" />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/textWhite"
        android:text="@string/resetConfer"
        android:background="@drawable/my_button"
        android:id="@+id/conferReset"/>
</LinearLayout>
