<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="50dp"
    android:paddingStart="50dp"
    android:background="#14b9b9"
    tools:context="com.example.zqb.imageoverlaysadmin.views.LoginActivity">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_rectangle_shape">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_user"/>
        <EditText
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="4.0"
            android:textColor="@color/textWhite"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:hint="@string/username1"
            android:gravity="center_vertical"
            android:textColorHint="@color/text_Grey"
            android:background="@drawable/edit_shape_without_border"
            android:id="@+id/username"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/my_rectangle_shape">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_password"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textColor="@color/textWhite"
            android:maxLines="1"
            android:hint="@string/password"
            android:gravity="center_vertical"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:inputType="textPassword"
            android:textColorHint="@color/text_Grey"
            android:background="@drawable/edit_shape_without_border"
            android:id="@+id/password"/>
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/textWhite"
        android:text="@string/login"
        android:background="@drawable/my_button"
        android:id="@+id/login"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:id="@+id/toRegister"
            android:textColor="@color/colorPrimary"
            android:text="@string/toRegister"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text=" | "/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:id="@+id/forgetPassword"
            android:textColor="@color/colorPrimary"
            android:text="@string/forgetPassword"/>
    </LinearLayout>

</LinearLayout>
