<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_back"
    tools:context="com.example.zqb.imageoverlaysadmin.views.RegisterActivity">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:fadingEdgeLength="0dp"
        app:cardBackgroundColor="@color/cardBack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="25dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/icon_user"/>
                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="4.0"
                    android:maxLines="1"
                    android:hint="@string/username"
                    android:gravity="bottom"
                    android:background="@drawable/edit_shape_without_border"
                    android:id="@+id/username"/>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/icon_pass"/>
                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:hint="@string/password"
                    android:gravity="bottom"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_shape_without_border"
                    android:id="@+id/password"/>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/icon_pass"/>
                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:hint="@string/conferPassword"
                    android:gravity="bottom"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_shape_without_border"
                    android:id="@+id/confer_password"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/icon_pass"/>
                        <EditText
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:maxLines="1"
                            android:hint="@string/code"
                            android:gravity="center_vertical"
                            android:inputType="textPassword"
                            android:background="@drawable/edit_shape_without_border"
                            android:id="@+id/code"/>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/line"/>
                </LinearLayout>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/getCode"
                    android:id="@+id/getCode"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button"
        android:id="@+id/register"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/toLogin"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/toLogin"/>
</LinearLayout>
